; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_takdec.c_tak_check_crc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_takdec.c_tak_check_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_CRC_24_IEEE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32*, i32)* @tak_check_crc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @tak_check_crc(i64 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @AV_CRC_24_IEEE, align 4
  %8 = call i32 @av_crc_get_table(i32 %7)
  %9 = load i64, i64* %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i64 @av_crc(i32 %8, i64 %9, i32* %10, i32 %11)
  ret i64 %12
}

declare dso_local i64 @av_crc(i32, i64, i32*, i32) #1

declare dso_local i32 @av_crc_get_table(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
